--- a/assets/css/english-version.css
+++ b/assets/css/english-version.css
@@ -1091,3 +1091,375 @@ th {
     border-radius: 10px;
     color: black;
 }
+@media screen and (max-width :600px) {
+    body::-webkit-scrollbar {
+        display: none;
+    }
+
+    .contact {
+        display: none;
+    }
+
+    .headvideo1 {
+        display: none;
+    }
+
+    .totalnav {
+        background-image: url("../images/essecial/istockphoto-1133933954-612x612.jpg");
+        background-position: center;
+        background-size: cover;
+    }
+
+    nav {
+        background-image: url("../images/essecial/istockphoto-1133933954-612x612.jpg");
+        background-position: center;
+        background-size: cover;
+
+    }
+
+    nav form {
+        width: 250px;
+        margin: 0%;
+    }
+
+    .section1 button {
+        width: 200px;
+        margin-bottom: 60px;
+    }
+
+    .section1 h2 {
+        font-size: 15px;
+    }
+
+    .section3 button {
+        width: 200px;
+    }
+
+    .section2 .content1 {
+        width: 100%;
+    }
+
+    .section2 .box {
+        display: flex;
+        flex-direction: column-reverse;
+        width: 20em;
+    }
+
+    .section4 .project {
+        display: none;
+    }
+
+    .section4 {
+        position: relative;
+        bottom: 800px;
+        width: 85%;
+        /* margin: 0%; */
+        text-align: center;
+        display: flex;
+        align-items: center;
+    }
+
+    .news {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: auto;
+    }
+
+    .news1 {
+        width: 85%;
+        margin-top: 10%;
+    }
+
+    .news .news1 .img-fluid {
+        margin: 10px 0 0 0;
+    }
+
+    .footer {
+        display: none;
+        /* flex-direction: column; */
+    }
+
+    /* total parties */
+
+    .totalparties {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+        width: 100%;
+
+
+    }
+
+    .parties-main {
+        margin-top: 60px;
+    }
+
+    .parties-main .parties2 .backside button a {
+        font-size: 15px;
+    }
+
+    /* portfolio */
+
+    .lists1 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 30px 0 0 0;
+    }
+
+    .list2 {
+        margin: 0%;
+    }
+
+    .piechart {
+        margin: 0%;
+        padding-top: 30px;
+    }
+
+    /* profile */
+    .headprofile {
+        margin: 0;
+        display: flex;
+        flex-direction: column-reverse;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .cm-name {
+        width: 90%;
+        line-height: 2;
+    }
+
+    .headprofile .cm-image img {
+        width: 300px;
+    }
+
+    .cm-total-content {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .cmcontent {
+        margin: 0%;
+        width: 100%;
+    }
+
+    #income {
+        display: flex;
+        flex-direction: column;
+    }
+
+    /* pastleaders */
+
+    .pastleaders table {
+        margin: 0%;
+        padding: 0;
+        width: 100%;
+    }
+
+    .pastleaders table td {
+        padding: 50px 0 0 0;
+    }
+
+    .pastleaders table .date {
+        display: none;
+    }
+
+    /* manifesto */
+
+    .manifesto-create {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .mani-navbar ul {
+        height: 400px;
+        /* width: 400px; */
+        /* display: inline-flex; */
+        /* flex-wrap: wrap; */
+
+        /* z-index: -1; */
+    }
+
+    .kali {
+        /* display: none; */
+        z-index: -1;
+        height: 80px;
+    }
+
+    .kali .maninav {
+        display: none;
+    }
+
+    .kali .serch {
+        margin: 0%;
+    }
+
+    .complete {
+        width: 100%;
+        height: 500px;
+    }
+
+
+    .complete .rules {
+        width: 100%;
+
+    }
+
+    .manisurvey {
+        margin: 10px;
+    }
+
+    /* governer list */
+
+    #governer-list table {
+        margin: 0%;
+
+    }
+
+    /* english verssion past leaders */
+
+    .datelist table {
+        margin: 30px 0 30px 0;
+
+    }
+
+    .opinionpoll {
+        width: 100%;
+        margin: 0%;
+    }
+
+    .opinionpoll form {
+        margin-top: 0;
+        width: 100%;
+        padding: 0;
+    }
+
+    .opinionpoll button {
+        margin: 0;
+    }
+
+    /* join page */
+
+    .joinpage form {
+        width: 100%;
+        margin: 0;
+    }
+
+    .joinpage {
+        margin: 0;
+        width: 100%;
+    }
+
+
+}
+
+@media screen and (min-width: 601px) and (max-width:1000px) {
+
+    .headvideo1 {
+        display: none;
+    }
+
+    .totalnav {
+        background-image: url("../images/essecial/istockphoto-1133933954-612x612.jpg");
+        background-position: center;
+        background-size: cover;
+    }
+
+    nav {
+        background-image: url("../images/essecial/istockphoto-1133933954-612x612.jpg");
+        background-position: center;
+        background-size: cover;
+
+    }
+
+
+
+    .pastleaders table {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+    }
+
+    .pastleaders table td {
+        padding: 0%;
+    }
+
+    .news {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        width: auto;
+    }
+
+    .news1 {
+        width: 40%;
+        margin-top: 10%;
+    }
+
+    .news .news1 .img-fluid {
+        margin: 10px 0 0 0;
+    }
+
+    .footer {
+        display: none;
+
+    }
+
+    .backside button a {
+        font-size: 15px;
+    }
+
+    .lists1 {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-around;
+
+
+        margin: 30px 0 0 0;
+    }
+
+    .list2 {
+        margin: 0%;
+    }
+
+    /* .piechart {
+        margin: 0%;
+        padding-top: 30px;
+    } */
+
+    .totalparties {
+        /* display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr; */
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+        margin: 0;
+        width: 100%;
+
+
+    }
+
+    .parties-main {
+        margin-top: 60px;
+    }
+
+    #governer-list table {
+        margin: 0%;
+        z-index: -10;
+
+    }
+
+
+}
