--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -196,8 +196,9 @@ nav form {
     justify-content: center;
     align-items: center;
 }
-.section1 h1{
-   text-shadow: -2px 2px #ffffff;
+
+.section1 h1 {
+    text-shadow: -2px 2px #ffffff;
 }
 
 /* .section1 button {
@@ -903,6 +904,10 @@ nav form {
 
 }
 
+.profile-nav ul li {
+    list-style: none;
+}
+
 .profile-nav {
     margin: 5% 0 0 5%;
     box-shadow: -1px 9px 14px 7px rgba(26, 22, 26, 0.53);
@@ -912,12 +917,17 @@ nav form {
 
 }
 
+.profile-nav ul li a {
+    text-decoration: none;
+    color: black;
+}
+
 
 .cmcontent {
     display: flex;
     flex-direction: column;
     width: 90%;
-    height: 350px;
+    height: 400px;
     margin: 4% 0 0 5%;
     line-height: 1.5;
     overflow: scroll;
@@ -1372,9 +1382,9 @@ nav form {
     border-radius: 10px;
 }
 
-.fontsidepro:nth-child(even) {
+/* .fontsidepro:nth-child(even) {
     background-image: url("../images/Mmk_flag.png");
-}
+} */
 
 .fontsidepro p {
     /* background-color: rgb(10, 135, 252); */
@@ -1546,7 +1556,7 @@ td .name-img {
     box-sizing: border-box;
 } */
 
-@media screen and (max-width :900px) {
+@media screen and (max-width :600px) {
     body::-webkit-scrollbar {
         display: none;
     }
@@ -1554,15 +1564,17 @@ td .name-img {
     .contact {
         display: none;
     }
-    .headvideo1{
+
+    .headvideo1 {
         display: none;
     }
 
-    .totalnav{
+    .totalnav {
         background-image: url("../images/essecial/istockphoto-1133933954-612x612.jpg");
         background-position: center;
         background-size: cover;
     }
+
     nav {
         background-image: url("../images/essecial/istockphoto-1133933954-612x612.jpg");
         background-position: center;
@@ -1598,7 +1610,7 @@ td .name-img {
         width: 20em;
     }
 
-    .section4 .project{
+    .section4 .project {
         display: none;
     }
 
@@ -1624,7 +1636,8 @@ td .name-img {
         width: 85%;
         margin-top: 10%;
     }
-    .news .news1 .img-fluid{
+
+    .news .news1 .img-fluid {
         margin: 10px 0 0 0;
     }
 
@@ -1641,12 +1654,16 @@ td .name-img {
         align-items: center;
         margin: 0;
         width: 100%;
-        
+
 
     }
 
     .parties-main {
         margin-top: 60px;
+    }
+
+    .parties-main .parties2 .backside button a {
+        font-size: 15px;
     }
 
     /* portfolio */
@@ -1656,7 +1673,7 @@ td .name-img {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin:30px 0 0 0;
+        margin: 30px 0 0 0;
     }
 
     .list2 {
@@ -1707,6 +1724,7 @@ td .name-img {
     .pastleaders table {
         margin: 0%;
         padding: 0;
+        width: 100%;
     }
 
     .pastleaders table td {
@@ -1725,7 +1743,7 @@ td .name-img {
     }
 
     .mani-navbar ul {
-        height: 350px;
+        height: 400px;
         /* width: 400px; */
         /* display: inline-flex; */
         /* flex-wrap: wrap; */
@@ -1806,12 +1824,107 @@ td .name-img {
 
 }
 
-/* @media screen and (max-width: 900px) {
+@media screen and (min-width: 601px) and (max-width:1000px) {
 
-   nav {
-    background-color: aqua;
-   }
-    
-} */
+    .headvideo1 {
+        display: none;
+    }
+
+    .totalnav {
+        background-image: url("../images/essecial/istockphoto-1133933954-612x612.jpg");
+        background-position: center;
+        background-size: cover;
+    }
+
+    nav {
+        background-image: url("../images/essecial/istockphoto-1133933954-612x612.jpg");
+        background-position: center;
+        background-size: cover;
+
+    }
 
 
+
+    .pastleaders table {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+    }
+
+    .pastleaders table td {
+        padding: 0%;
+    }
+
+    .news {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        width: auto;
+    }
+
+    .news1 {
+        width: 40%;
+        margin-top: 10%;
+    }
+
+    .news .news1 .img-fluid {
+        margin: 10px 0 0 0;
+    }
+
+    .footer {
+        display: none;
+
+    }
+
+    .backside button a {
+        font-size: 15px;
+    }
+
+    .lists1 {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-around;
+
+
+        margin: 30px 0 0 0;
+    }
+
+    .list2 {
+        margin: 0%;
+    }
+
+    /* .piechart {
+        margin: 0%;
+        padding-top: 30px;
+    } */
+
+    .totalparties {
+        /* display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr; */
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+        margin: 0;
+        width: 100%;
+
+
+    }
+
+    .parties-main {
+        margin-top: 60px;
+    }
+
+    #governer-list table {
+        margin: 0%;
+        z-index: -10;
+
+    }
+
+
+}
